fixed some styling. made StickyNav auto hide when viewport is too small

--- a/public/styles.css
+++ b/public/styles.css
@@ -31,19 +31,19 @@ li{
     display:flex;
     height:100vh;
     width:100vw;
+    justify-content:center
 }
 
 #sticky{
     align-self:center;
-    margin-left: min(25%, 256px);
-
-    background-color:var(--color-1);
+    z-index: 1;
 } 
 
 #details-bar{
     position:absolute;
     right:0%;
     top:0%;
+    z-index:2;
 }
 
 #sticky-nav{
@@ -55,6 +55,7 @@ li{
     width:20%;
     max-width: 300px;
     min-width:200px;
+    z-index:2;
 }
 a{
     text-decoration:none;
